// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Earnings displays lending maintenance banner when feature flag is enabled 1`] = `
<View>
  <View
    style={
      {
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 8,
        }
      }
    >
      Your earnings
    </Text>
    <View>
      <View
        style={
          {
            "backgroundColor": "#9a63001a",
            "borderColor": "#9a6300",
            "borderLeftWidth": 4,
            "borderRadius": 4,
            "flexDirection": "row",
            "padding": 12,
            "paddingLeft": 8,
          }
        }
        testID="banneralert"
        variant="Alert"
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <SvgMock
            color="#9a6300"
            fill="currentColor"
            height={24}
            name="Danger"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            We're down for maintenance. We'll be back online soon!
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Annual rate
          </Text>
          <TouchableOpacity
            accessibilityLabel="Annual rate tooltip"
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            hitSlop={
              {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="annual-rate-tooltip"
          >
            <SvgMock
              color="#b7bbc8"
              fill="currentColor"
              height={16}
              name="Info"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          2.6%
           APR
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Lifetime rewards
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Estimated annual earnings
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="earn-earnings-history-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          View earnings history
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`Earnings displays pooled-staking maintenance banner when feature flag is enabled 1`] = `
<View>
  <View
    style={
      {
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 8,
        }
      }
    >
      Your earnings
    </Text>
    <View>
      <View
        style={
          {
            "backgroundColor": "#9a63001a",
            "borderColor": "#9a6300",
            "borderLeftWidth": 4,
            "borderRadius": 4,
            "flexDirection": "row",
            "padding": 12,
            "paddingLeft": 8,
          }
        }
        testID="banneralert"
        variant="Alert"
      >
        <View
          style={
            {
              "marginRight": 8,
            }
          }
        >
          <SvgMock
            color="#9a6300"
            fill="currentColor"
            height={24}
            name="Danger"
            style={
              {
                "height": 24,
                "width": 24,
              }
            }
            width={24}
          />
        </View>
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            We're down for maintenance. We'll be back online soon!
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Annual rate
          </Text>
          <TouchableOpacity
            accessibilityLabel="Annual rate tooltip"
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            hitSlop={
              {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="annual-rate-tooltip"
          >
            <SvgMock
              color="#b7bbc8"
              fill="currentColor"
              height={16}
              name="Info"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          2.6%
           APR
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Lifetime rewards
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Estimated annual earnings
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="earn-earnings-history-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          View earnings history
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`Earnings should render correctly 1`] = `
<View>
  <View
    style={
      {
        "paddingTop": 16,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 18,
          "letterSpacing": 0,
          "lineHeight": 24,
          "paddingBottom": 8,
        }
      }
    >
      Your earnings
    </Text>
    <View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Annual rate
          </Text>
          <TouchableOpacity
            accessibilityLabel="Annual rate tooltip"
            accessibilityRole="button"
            accessible={true}
            activeOpacity={1}
            disabled={false}
            hitSlop={
              {
                "bottom": 15,
                "left": 15,
                "right": 15,
                "top": 15,
              }
            }
            onPress={[Function]}
            onPressIn={[Function]}
            onPressOut={[Function]}
            style={
              {
                "alignItems": "center",
                "borderRadius": 8,
                "height": 24,
                "justifyContent": "center",
                "opacity": 1,
                "width": 24,
              }
            }
            testID="annual-rate-tooltip"
          >
            <SvgMock
              color="#b7bbc8"
              fill="currentColor"
              height={16}
              name="Info"
              style={
                {
                  "height": 16,
                  "width": 16,
                }
              }
              width={16}
            />
          </TouchableOpacity>
        </View>
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#457a39",
              "fontFamily": "Geist Regular",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          2.6%
           APR
        </Text>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Lifetime rewards
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingVertical": 8,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            Estimated annual earnings
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "flex-end",
            }
          }
        >
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#121314",
                "fontFamily": "Geist Regular",
                "fontSize": 16,
                "letterSpacing": 0,
                "lineHeight": 24,
              }
            }
          >
            $5000
          </Text>
          <Text
            accessibilityRole="text"
            style={
              {
                "color": "#686e7d",
                "fontFamily": "Geist Medium",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 22,
              }
            }
          >
            2.5 ETH
          </Text>
        </View>
      </View>
    </View>
    <View>
      <TouchableOpacity
        accessibilityRole="button"
        accessible={true}
        activeOpacity={1}
        onPress={[Function]}
        onPressIn={[Function]}
        onPressOut={[Function]}
        style={
          {
            "alignItems": "center",
            "alignSelf": "stretch",
            "backgroundColor": "#3c4d9d0f",
            "borderColor": "transparent",
            "borderRadius": 12,
            "borderWidth": 1,
            "flexDirection": "row",
            "height": 40,
            "justifyContent": "center",
            "overflow": "hidden",
            "paddingHorizontal": 16,
          }
        }
        testID="earn-earnings-history-button"
      >
        <Text
          accessibilityRole="text"
          style={
            {
              "color": "#121314",
              "fontFamily": "Geist Medium",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
            }
          }
        >
          View earnings history
        </Text>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
